[gd_scene load_steps=4 format=3 uid="uid://28t2spvyrii1"]

[ext_resource type="Script" path="res://scripts/customer.gd" id="1_rji70"]
[ext_resource type="Texture2D" uid="uid://b8n3hjgfd087d" path="res://assets/customers/blueguy.png" id="2_gk1it"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nyhxa"]
size = Vector2(90, 157)

[node name="Customer" type="Node2D"]
script = ExtResource("1_rji70")

[node name="CustomerSprite" type="Sprite2D" parent="."]
position = Vector2(314, 289)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gk1it")

[node name="CustomerPatience" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(315, 287)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -58.5)
shape = SubResource("RectangleShape2D_nyhxa")

[node name="OrderMoney" type="Label" parent="."]
visible = false
offset_left = 268.0
offset_top = 179.0
offset_right = 319.0
offset_bottom = 202.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24

[node name="OrderReputation" type="Label" parent="."]
visible = false
offset_left = 328.0
offset_top = 209.0
offset_right = 368.0
offset_bottom = 237.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24

[node name="CustomerLeft" type="Label" parent="."]
visible = false
offset_left = 227.0
offset_top = 165.0
offset_right = 392.0
offset_bottom = 199.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "Customer left!"

[node name="CustomerLeftTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CustomerServedTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="OrderRepTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="CustomerPatience" to="." method="_on_customer_patience_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="CustomerLeftTimer" to="." method="_on_customer_left_timer_timeout"]
[connection signal="timeout" from="CustomerServedTimer" to="." method="_on_customer_served_timer_timeout"]
[connection signal="timeout" from="OrderRepTimer" to="." method="_on_order_rep_timer_timeout"]
